src/css/main.css
* {
    box-sizing: border-box;
}
*:focus {
    outline: none;
}
body {
    font-family: 'Roboto', sans-serif;
    margin: 0px;
    overflow: hidden;
}
a {
    text-decoration: none;
}
.page {
    background-color: #f1f5f9;
    min-height: 100vh;
}
ul {
    list-style: none;
    padding: 0;
}
h1 {
    margin: 20px 20px 40px;
}
h1::before,
h1::after {
    content: "";
    height: 3px;
    position: absolute;
    bottom: -10px;
    left: 0;
}
h1::before {
    background-color: #304352;
    background: linear-gradient(to right, #304352, #d7d2cc);
    width: 160px;
}
::-webkit-scrollbar {
    width: 15px;
}
::-webkit-scrollbar-track {
    background-color: white;
}
::-webkit-scrollbar-thumb {
    background-color: #0075ff;;
}
::-webkit-scrollbar-thumb:hover {
    background-color: #0d69d5;
}

